As per PR #211, clarifying authorship - When I was attributing this chapter, I misunderstood @rpaik's involvement. - Ray made a PR to fix the visible attribution, merged at https://github.com/theopensourceway/guidebook/pull/211 - This cleans up the same for the chapter itself
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/creating_a_culture_of_mentorship.adoc
+++ b/creating_a_culture_of_mentorship.adoc
@@ -1,5 +1,5 @@
 = Creating a Culture of Mentorship
-// Authors: Karsten Wade <kwade@redhat.com>, Guedis Cardenas <guedis@palante.co>, Ray Paik <ray@cube.dev>
+// Authors: Karsten Wade <kwade@redhat.com>, Guedis Cardenas <guedis@palante.co>
 // Updated: 2020-12-14
 // Versions: 2.0
 // Status: DRAFT
