Forgot to update this section to match 2.0 release facts - Original plan for 2.0 release was more ambitious, as reflected in this section written when that was still the plan. - Rather than remove the planned chapter aspects not in the 2.0 release, I created a roadmap for them. - The aspects marked 2.1 are ones I already plan to work on, so I am more-or-less committing to those aspects. - Regardless, any future roadmap plan is subject to change.
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/presenting_tosw.adoc
+++ b/presenting_tosw.adoc
@@ -96,15 +96,16 @@ A chapter represents discussion of a discrete topic or closely-related set of to
 The idea is that you can open and read a chapter as a stand-alone experience without needing to read the rest of the guide to understand and act from the material in that chapter.
 // Having the PIE consideration helps as reader find themselves in the guide at any point.
 
-A chapter consists of several parts:
+The vision for the 2.x series of this guidebook is for each chapter to consist of several aspects.
+The version number in brackets indicates when that aspect is planned to appear:
 
-* An introduction
-* Primary material, written in third-person point-of-view, focusing on a balance of what, how, and why content. The examples (stories) told here are brief and in the third person.
+* An introduction. [2.0]
+* Primary material, written in third-person point-of-view, focusing on a balance of what, how, and why content. The examples (stories) told here are brief and in the third person. [2.0]
+* Each chapter contains a lexicon at the end that defines the special usage for terms within that chapter. [2.1]
 * Expanded stories come at the end of the chapter, and are one or more stories from the chapter author(s).
 These may be written in the first person—that may be the most effective way to make the point in many cases.
-These stories are modular, in that another story that makes a similar point but from a different situation can be used instead.
-** The idea is to start with a base story or set of stories in a chapter, and supplement or substitute other stories that are contributed to the project, such as through the interview effort.
-* Each chapter contains a lexicon at the end that defines the special usage for terms within that chapter.
+These stories are modular, in that another story that makes a similar point but from a different situation can be used instead. [2.2]
+** The idea is to start with a base story or set of stories in a chapter, and supplement or substitute other stories that are contributed to the project, such as through the interview effort. [2.1, 2.2]
 
 Finally, we're collecting stories from practitioners of the open source way, stories we know tend to illustrate more than one principle in action.
 The idea is to start with a base story or set of stories in a chapter, and supplement or substitute other stories that are contributed to the project, such as through the interview effort.
